Revert "added -webkit-fill-available to fix 100vh issue on safari mobile"
This reverts commit f71d945c9b13ec0a763745b5a1d26328b0d86b06.

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,8 +1,6 @@
 .container {
     position: relative;
-        min-height: 100vh;
-    /* fix height in mobile safari */
-    min-height: -webkit-fill-available;;
+    min-height: 100vh;
 
     display: flex;
     flex-direction: column;
