--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,7 +1,5 @@
 .container {
-        min-height: 100vh;
-    /* fix height in mobile safari */
-    min-height: -webkit-fill-available;;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
