--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,6 @@
 .container {
     /*overflow-x: hidden;*/
-        min-height: 100vh;
-    /* fix height in mobile safari */
-    min-height: -webkit-fill-available;;
+    min-height: 100vh;
     flex: 1;
     display: flex;
     flex-direction: column;
