--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -1,8 +1,6 @@
 .container {
     /* set min height because picture might cause really big content*/
-        min-height: 100vh;
-    /* fix height in mobile safari */
-    min-height: -webkit-fill-available;;
+    min-height: 100vh;
     background: var(--color-dark);
     display: flex;
     flex-direction: column;
