--- a/styles/Mountains.module.css
+++ b/styles/Mountains.module.css
@@ -7,8 +7,6 @@
 .graphics {
     position: relative;
     height: 100vh;
-    /* fix height in mobile safari */
-    min-height: -webkit-fill-available;;
 }
 
 .mountains {
@@ -57,8 +55,6 @@
 
 .sunset {
     height: 100vh;
-    /* fix height in mobile safari */
-    height: -webkit-fill-available;;
     width: 100%;
     background: linear-gradient(180deg, rgba(255, 125, 97, 0) 0%, #FFEFC8 64.06%);
 }
