--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -11,9 +11,7 @@
 .project {
     position: relative;
     padding: 3em;
-        min-height: 100vh;
-    /* fix height in mobile safari */
-    min-height: -webkit-fill-available;;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
